syntax change to vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
         "src": "package.json",
         "use": "@vercel/next",
         "config": {
-          "packageManagerStrict": false
+          "package-manager-strict": false
         }
       }
     ]
